// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stability should render correctly 1`] = `
<div>
  <div
    class="stability stabilityLevel0"
  >
    components.api.stability
  </div>
</div>
`;

exports[`Stability should render correctly 2`] = `
<div>
  <div
    class="stability stabilityLevel1"
  >
    components.api.stability
  </div>
</div>
`;

exports[`Stability should render correctly 3`] = `
<div>
  <div
    class="stability stabilityLevel2"
  >
    components.api.stability
  </div>
</div>
`;

exports[`Stability should render correctly 4`] = `
<div>
  <div
    class="stability stabilityLevel3"
  >
    components.api.stability
  </div>
</div>
`;
